--- a/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
@@ -23,9 +23,17 @@
                 <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
                     <br/><br/>        
                     <p:graphicImage name="editar.png" library="images" style="background-color: white;" width="80" />
-                    <br/>
+                    <br/><br/>
                     <h5>Cooperantes</h5>
                     <br/><br/>
+                </div>
+            </div>
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'asociarMetaOds.mined';" >
+                <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <br/><br/>        
+                    <p:graphicImage name="link.png" library="images" style="background-color: white;" width="80" />
+                    <br/><br/>
+                    <h5>Asociar meta ODS</h5>
                     <br/><br/>
                 </div>
             </div>
