--- a/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
@@ -17,7 +17,10 @@
 
 
     <ui:define name="contenido">
-
+        <p:breadCrumb>
+            <p:menuitem value="Inicio" url="../inicio.mined" />
+        </p:breadCrumb>
+        <p:spacer height="25"/>
         <div class="p-grid dashboard p-jc-center p-ai-center vertical-container" style="background-color: white !important; height: 88vh;">
             <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'manttoCooperante.mined';" >
                 <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
