--- a/cooperacion-web/src/main/webapp/aprobarCooperacion.xhtml
+++ b/cooperacion-web/src/main/webapp/aprobarCooperacion.xhtml
@@ -43,7 +43,8 @@
                     <p:outputLabel for="txtClaveRemitente" value="Contraseña"/>
                     <div class="input-wrapper">
                         <p:password id="txtClaveRemitente" widgetVar="txtClaveRemitente" value="#{aprobarCapacitacionView.password}" placeholder="Password" required="true"/>
-                        <i class="pi pi-lock" />
+                        <p:graphicImage name="images/login/lock.png" library="paradise-layout"
+                                                styleClass="lock-icon"/>
                     </div>
                 </div>
                 <div class="p-col-12">
