--- a/paquescolar-web/src/main/webapp/app/reg02Resguardo.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Resguardo.xhtml
@@ -7,12 +7,8 @@
     template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
     <ui:define name="content">
         <p:menubar id="menuBar" styleClass="divSticky"> 
-            <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo" 
-                        disabled="true"
-                        update="pnlFiltro"/>
-            <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar"
-                        action="#{resguardoMB.limpiar}" 
-                        update="pnlFiltro"/>
+            <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo" disabled="true" />
+            <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar" disabled="true"/>
             <p:menuitem value="Guardar" icon="fa fa-save" action="#{resguardoMB.guardar}" update="pnlFiltro tblDetalleOferta"
                         disabled="#{menuController.usuarioSoloLectura}"/>
             <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true"/>
@@ -38,18 +34,25 @@
                         <p:selectOneMenu id="cboRubro" value="#{resguardoMB.rubro}">
                             <f:selectItem itemLabel="Seleccione un rubro" />
                             <f:selectItems value="#{parametrosMB.lstRubrosResguardo}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
-                             <p:ajax update=":frmPrincipal:pnlFiltro"/>
+                            <p:ajax update=":frmPrincipal:pnlFiltro"/>
                         </p:selectOneMenu>
 
                         <p:outputLabel value="#{bundle['ce.codEnt']}:" for="txtCodigoEntidad" />
                         <p:outputPanel id="codigoEntidad" >
                             <p:inputText id="txtCodigoEntidad" maxlength="5" value="#{resguardoMB.codigoEntidad}" size="6" autocomplete="off" 
                                          requiredMessage="Código de infraestructura" onkeyup="return this.value.length >= 5">
-                                <p:ajax event="keyup" update="menuBar nombreCE tblDetalleOferta" listener="#{resguardoMB.buscarEntidadEducativa}" />
+                                <p:ajax event="keyup" update="menuBar nombreCE cboProveedor" listener="#{resguardoMB.buscarEntidadEducativa}" />
                             </p:inputText>
                             <p:spacer width="10"/>
                             <p:outputLabel id="nombreCE" value="#{resguardoMB.entidadEducativa.nombre}" style="font-weight: bold"/>
                         </p:outputPanel>
+
+                        <p:outputLabel value="Proveedor:" />
+                        <p:selectOneMenu id="cboProveedor" value="#{resguardoMB.idParticipante}"  onkeydown="setaFoco(this);" >
+                            <f:selectItem itemLabel="Seleccione un proveedor" itemValue="" />  
+                            <f:selectItems value="#{resguardoMB.lstParticipantes}" var="par" itemValue="#{par.idParticipante}" itemLabel="#{par.razonSocial}"/>
+                            <p:ajax listener="#{resguardoMB.buscarResguardoPorContrato}" update="tblDetalleOferta"/>
+                        </p:selectOneMenu>
                     </p:panelGrid>
                 </div>
 
@@ -64,23 +67,29 @@
 
                     <p:dataTable id="tblDetalleOferta" value="#{resguardoMB.lstResguardoBienes}" var="resguardo" rowKey="#{resguardo.idResguardo}" rowIndexVar="rowId"
                                  rowStyleClass="#{resguardo.estadoEliminacion eq 1 ? 'filaEliminada' : null}"
-                                 styleClass="ui-datatable-borderless ui-datatable-reflow">
+                                 styleClass="ui-datatable-borderless ui-datatable-reflow" emptyMessage="No hay registros" >
                         <p:column headerText="#" width="50" styleClass="centrado">
                             #{rowId +1 }
                         </p:column>
-                        <p:column headerText="Nivel Educativo">
-                            <p:outputLabel value="#{resguardo.idNivelEducativo.descripcionNivel}"/>
+                        <p:column headerText="Fecha inserción">
+                            <p:outputLabel value="#{resguardo.fechaInsercion}">
+                                <f:convertDateTime pattern="dd/MM/yyyy"/>
+                            </p:outputLabel>
                         </p:column>
-                        <p:column headerText="Item">
-                            <p:outputLabel value="#{resguardo.idProducto.nombreProducto}"/>
+                        <p:column headerText="Total en Resguardo">
+                            <p:outputLabel value="#{resguardo.totalCantidad}"/>
                         </p:column>
-                        <p:column headerText="Cantidad a resguardar" styleClass="numero" width="60">
-                            <p:inputNumber value="#{resguardo.cantidad}" inputStyleClass="numero" decimalPlaces="0" size="5"/>
-                        </p:column>
-                        <p:column headerText="Borrar" width="35" styleClass="centrado">
+                        <p:column headerText="Editar" width="40" styleClass="centrado">
                             <p:commandLink action="#{resguardoMB.eliminarDetalle}" update="tblDetalleOferta">
-                                <p:outputLabel rendered="#{!resguardo.eliminar}"> <i class="fa fa-check-circle"></i></p:outputLabel>
-                                <p:outputLabel rendered="#{resguardo.eliminar}"> <i class="fa fa-minus-circle"></i></p:outputLabel>
+                                <p:outputLabel><i class="fa fa-pencil"></i></p:outputLabel>
+                                <f:setPropertyActionListener value="#{resguardo}" target="#{resguardoMB.resguardoBienes}"/>  
+                                <f:setPropertyActionListener value="#{rowId}" target="#{resguardoMB.rowEdit}"/>  
+                            </p:commandLink>
+                        </p:column>
+                        <p:column headerText="Borrar" width="40" styleClass="centrado">
+                            <p:commandLink action="#{resguardoMB.eliminarDetalle}" update="tblDetalleOferta">
+                                <p:outputLabel rendered="#{!(resguardo.estadoEliminacion eq 0)}"> <i class="fa fa-check-circle"></i></p:outputLabel>
+                                <p:outputLabel rendered="#{(resguardo.estadoEliminacion eq 0)}"> <i class="fa fa-minus-circle"></i></p:outputLabel>
                                 <f:setPropertyActionListener value="#{resguardo}" target="#{resguardoMB.resguardoBienes}"/>  
                                 <f:setPropertyActionListener value="#{rowId}" target="#{resguardoMB.rowEdit}"/>  
                             </p:commandLink>
@@ -91,23 +100,22 @@
         </div>
 
         <p:dialog id="dlgDetalle" widgetVar="dlgDetalle" closable="false" draggable="false" minimizable="false" modal="true" width="700" header="Detalle de Items Contratados">
-            <p:panel>
-                <p:dataTable id="tblDetalleItems" value="#{resguardoMB.lstDetalle}" var="det" rowIndexVar="rowId" rowKey="#{det.idRow}"
-                             selectionMode="multiple" selection="#{resguardoMB.lstDetalleSelect}">
-                    <p:column headerText="#" width="40" styleClass="centrado">
-                        #{rowId +1 }
-                    </p:column>
-                    <p:column headerText="Nivel educativo">
-                        <p:outputLabel value="#{det.descripcionNivel}"/>
-                    </p:column>
-                    <p:column headerText="Item">
-                        <p:outputLabel value="#{det.nombreProducto}"/>
-                    </p:column>
-                    <p:column headerText="Cantidad" width="60" styleClass="numero">
-                        <p:outputLabel value="#{det.cantidad}"/>
-                    </p:column>
-                </p:dataTable>
-            </p:panel>
+
+            <p:dataTable id="tblDetalleItems" value="#{resguardoMB.lstDetalle}" var="det" rowIndexVar="rowId" rowKey="#{det.idRow}">
+                <p:column headerText="#" width="20" styleClass="centrado">
+                    <p:outputLabel value="#{det.noItem}"/>
+                </p:column>
+                <p:column headerText="Nivel educativo">
+                    <p:outputLabel value="#{det.descripcionNivel}"/>
+                </p:column>
+                <p:column headerText="Item">
+                    <p:outputLabel value="#{det.nombreProducto}"/>
+                </p:column>
+                <p:column headerText="Cantidad en Reguardo" width="70" styleClass="numero">
+                    <p:inputNumber value="#{det.cantidad}" size="6" inputStyle="text-align: right" decimalPlaces="0"/>
+                </p:column>
+            </p:dataTable>
+
 
             <f:facet name="footer">
                 <p:commandButton value="Aceptar" icon="fa fa-check-circle" action="#{resguardoMB.agregarDetalle}" onclick="PF('dlgDetalle').hide();" update="tblDetalleOferta"/>
